<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.prompto</groupId>
	<artifactId>Parent-Platform</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
<!--	<module>SOLRFields</module> 
		<module>SOLRStore</module>
		<module>DatomicStore</module> -->
		<module>MongoStore</module>
		<module>Server</module>
		<module>AppStore</module>
		<module>AwsClient</module>
	</modules>

	<name>Prompto Platform</name>
	<description>Prompto Platform POM</description>
	<url>http://www.prompto.org</url>
	<organization>
		<name>Prompto</name>
		<url>http://www.prompto.org</url>
	</organization>

	<licenses>
		<license>
			<name>The Prompto License</name>
			<url>http://www.prompto.org/license.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Eric Vergnaud</name>
			<url>https://github.com/ericvergnaud</url>
			<roles>
				<role>Project lead</role>
			</roles>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://github.com/prompto/prompto-platform</connection>
		<developerConnection>scm:git:https://github.com/prompto/prompto-platform</developerConnection>
		<tag>Parent-Platform-0.0.1</tag>
		<url>https://github.com/prompto/prompto-platform</url>
	</scm>

	<properties>
    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jackson.version>2.13.1</jackson.version>
		<jetty.version>9.3.10.v20160621</jetty.version>
		<solr.version>5.4.0</solr.version>
		<mongo.version>4.2.3</mongo.version>
  	</properties>
  
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
				<configuration>
					<excludes>
						<exclude>**/.*</exclude>
						<exclude>**/.*/**/*.*</exclude>
					</excludes>
				</configuration>				
			</plugin>
		</plugins>
	</build>
	
	<profiles>
		<profile>
			<id>deploy</id>
			<distributionManagement>
				<snapshotRepository>
					<id>ossrh</id>
					<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
				</snapshotRepository>
				<repository>
					<id>ossrh</id>
					<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
				</repository>
			</distributionManagement>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>2.2.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.9.1</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.5</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.8</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
							<stagingProgressTimeoutMinutes>15</stagingProgressTimeoutMinutes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>